environments/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs-ex
  namespace: janine-dev
  labels:
    app: nodejs-ex
spec:
  to:
    kind: Service
    name: nodejs-ex
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
